--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "23.0.0 rc2"
+    compileSdkVersion 24
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "doop.aa_schedule"
         minSdkVersion 16
-        targetSdkVersion 22
-        versionCode 6
-        versionName "1.5"
+        targetSdkVersion 24
+        versionCode 7
+        versionName "1.6"
     }
     buildTypes {
         release {
@@ -21,8 +21,8 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:support-v4:24.1.1'
     compile 'com.github.machinarius:preferencefragment:0.1.2'
     compile files('libs/activation.jar')
     compile files('libs/additionnal.jar')
